--- a/style.css
+++ b/style.css
@@ -2,19 +2,24 @@
     max-width: 18rem;
 }
 
-.imagem-carrossel-um {
+.imagem-carrossel-um{
+    width: 100px;
+    height: auto;
+}
+
+.imagem-carrossel-dois {
     object-fit: cover;
     object-position: 0 80%;
     height: 680px;
 }
 
-.imagem-carrossel-dois {
+.imagem-carrossel-tres {
     object-fit: cover;
-    height: 6800px;
+    height: 680px;
     }
 
 main{
-    background-color:white;
+    background-color:whitesmoke;
 }
 
 .img-cred {
@@ -22,4 +27,9 @@ main{
     object-position: 0 70%;
     height: 300px;
     width: 100%;
+}
+
+.img-logo{
+    widows: 100px;
+    height: 100px;
 }
