--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ main{
     background:#000000;
     padding: 40px 0;
     width: 100%;
-    position: relative; 
-    margin-top: 30px;
+    position: relative; /* Adicionado */
   }
 
 .footer-arbos:before,
